@@ -1,21 +1,27 @@
-(***********************************************************************)
-(*                                                                     *)
-(*                           Objective Caml                            *)
-(*                                                                     *)
-(*            Xavier Leroy, projet Cristal, INRIA Rocquencourt         *)
-(*                                                                     *)
-(*  Copyright 1996 Institut National de Recherche en Informatique et   *)
-(*  en Automatique.  All rights reserved.  This file is distributed    *)
-(*  under the terms of the GNU Library General Public License, with    *)
-(*  the special exception on linking described in file ../LICENSE.     *)
-(*                                                                     *)
-(***********************************************************************)
+(*
+ * ExtString - Additional functions for string manipulations.
+ * Copyright (C) 1996 Xavier Leroy, INRIA Rocquencourt
+ * Copyright (C) 2009 David Teller, LIFO, Universite d'Orleans
+ * 
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version,
+ * with the special exception on linking described in file LICENSE.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *)
 
-(* $Id: lexing.mli,v 1.32 2006/09/12 10:38:18 doligez Exp $ *)
-
-(** The run-time library for lexers generated by [ocamllex]. 
-
-    @documents Lexing*)
+(** The run-time library for lexers generated by [ocamllex]. *)
+module Lexing :
+sig
 
 (** {6 Positions} *)
 
@@ -45,7 +51,7 @@ val dummy_pos : position;;
 (** {6 Lexer buffers} *)
 
 
-type lexbuf = Lexing.lexbuf =
+type lexbuf = Lexing.lexbuf = 
   { refill_buff : lexbuf -> unit;
     mutable lex_buffer : string;
     mutable lex_buffer_len : int;
@@ -64,19 +70,22 @@ type lexbuf = Lexing.lexbuf =
    The lexer buffer holds the current state of the scanner, plus
    a function to refill the buffer from the input.
 
-   Note that the lexing engine will only change the [pos_cnum] field
+   At each token, the lexing engine will copy [lex_curr_p] to
+   [lex_start_p], then change the [pos_cnum] field
    of [lex_curr_p] by updating it with the number of characters read
-   since the start of the [lexbuf].  The other fields are copied
-   without change by the lexing engine.  In order to keep them
+   since the start of the [lexbuf].  The other fields are left
+   unchanged by the lexing engine.  In order to keep them
    accurate, they must be initialised before the first use of the
    lexbuf, and updated by the relevant lexer actions (i.e. at each
-   end of line).
+   end of line -- see also [new_line]).
  *)
 
-val from_channel : in_channel -> lexbuf
-(** Create a lexer buffer on the given input channel.
-   [Lexing.from_channel inchan] returns a lexer buffer which reads
-   from the input channel [inchan], at the current reading position. *)
+val from_input   : IO.input   -> lexbuf
+(** Create a lexer buffer on the given input
+   [Lexing.from_input inp] returns a lexer buffer which reads
+   from the input [inp], at the current reading position. *)
+
+
 
 val from_string : string -> lexbuf
 (** Create a lexer buffer which reads from
@@ -131,12 +140,22 @@ val lexeme_end_p : lexbuf -> position
 (** Like [lexeme_end], but return a complete [position] instead
     of an offset. *)
 
+val new_line : lexbuf -> unit
+(** Update the [lex_curr_p] field of the lexbuf to reflect the start
+    of a new line.  You can call this function in the semantic action
+    of the rule that matches the end-of-line character. *)
+
 (** {6 Miscellaneous functions} *)
 
 val flush_input : lexbuf -> unit
 (** Discard the contents of the buffer and reset the current
     position to 0.  The next use of the lexbuf will trigger a
     refill. *)
+
+(** {6 Deprecated}*)
+
+val from_channel : IO.input -> lexbuf
+(** @deprecated As {!from_input}*)
 
 (**/**)
 
@@ -150,7 +169,7 @@ val sub_lexeme_opt : lexbuf -> int -> int -> string option
 val sub_lexeme_char : lexbuf -> int -> char
 val sub_lexeme_char_opt : lexbuf -> int -> char option
 
-type lex_tables = Lexing.lex_tables =
+type lex_tables =
   { lex_base : string;
     lex_backtrk : string;
     lex_default : string;
@@ -165,3 +184,5 @@ type lex_tables = Lexing.lex_tables =
 
 val engine : lex_tables -> int -> lexbuf -> int
 val new_engine : lex_tables -> int -> lexbuf -> int
+
+end
